added hero interface

--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,1 +1,4 @@
 <h2>{{hero}}</h2>
+<h2>{{hero2.name | uppercase}} Details</h2>
+<div><span>id: </span>{{hero2.id}}</div>
+<div><span>name: </span>{{hero2.name}}</div>
