--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,4 +1,6 @@
 <h2>{{hero}}</h2>
 <h2>{{hero2.name | uppercase}} Details</h2>
 <div><span>id: </span>{{hero2.id}}</div>
-<div><span>name: </span>{{hero2.name}}</div>
+<div><label for="name">Hero name: </label>
+    <input id="name" [(ngModel)]="hero2.name" placeholder="name">
+</div>
